[metadata]
name = pypatchelf
home-page = https://github.com/rmcgibbo/pypatchelf
license = GPL
author = Eelco Dolstra
summary = A small utility to modify the dynamic linker and RPATH of ELF executables
description-file = README.rst
classifier =
        Development Status :: 3- Alpha
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: Linux
        Topic :: Software Development

[pbr]
skip_changelog = 1
skip_authors = 1

[files]
packages = pypatchelf
package-data = pypatchelf = patchelf

[entry_points]
console_scripts =
    patchelf = pypatchelf:main

[extension=pypatchelf._dummy]
sources=
        empty.c
